@@ -8878,7 +8878,7 @@ Read2 EPS00000 #0004 Trms:0010
 Read2 FOR00000 #0005 Trms:0090
 Read2 GAM00000 #0006 Trms:0254
 Read2 BET00000 #0007 Trms:0013
-Read2 Status: 14
+Read2 Status: 10
 ], [])
 
 AT_CLEANUP
